objects/ESCSegmentRegionMappingSet__c.object
<CustomObject>
    <description>For usage of Setting Org wide Email Address/Businesshours based on Segment and region for ESC BU&apos;s</description>
    <fields>
        <fullName>ESC_BusHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>ESCSegmentRegionMappingSets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESC_CaseValLKP__c</fullName>
        <formula>ESC_Case_Field1__c + ESC_Case_Field2__c + ESC_Case_Field3__c + ESC_Case_Field4__c + ESC_Case_Field5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseValLKP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Case_Field1__c</fullName>
        <label>Case Field1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Case_Field2__c</fullName>
        <label>Case Field2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Case_Field3__c</fullName>
        <label>Case Field3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_IsRecType_BusHours__c</fullName>
        <description>this Field will be used to identify whether the business hours or record type should be considered</description>
        <inlineHelpText>this Field will be used to identify whether the business hours or record type should be considered</inlineHelpText>
        <label>IsRecordType/BusinessHours</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Record Type</fullName>
                </value>
                <value>
                    <fullName>Business Hours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_LKP__c</fullName>
        <formula>ESC_Segment__c+ESC_Region__c+ESC_Timezones__c</formula>
        <label>Rec Type LKP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_OrgWideDisplayName__c</fullName>
        <label>OrgWideDisplayName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Recordtype__c</fullName>
        <description>For setting Recordtype of case based on Role(ESC_Role__c).</description>
        <label>Recordtype</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Region__c</fullName>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Related_Met_Name__c</fullName>
        <label>Related Metadata Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Role__c</fullName>
        <inlineHelpText>Role names to be added as comma seperated value(CSV Format)</inlineHelpText>
        <label>Roles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Segment__c</fullName>
        <label>Segment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Timezones__c</fullName>
        <formula>TEXT(ESC_BusHours__r.TimeZoneSidKey)</formula>
        <label>TimeZone</label>
        <type>Text</type>
    </fields>
    <label>ESC SegmentRegion MappingSet</label>
    <listViews>
        <fullName>canada</fullName>
        <columns>NAME</columns>
        <columns>ESC_BusHours__c</columns>
        <columns>ESC_CaseValLKP__c</columns>
        <columns>ESC_IsRecType_BusHours__c</columns>
        <columns>ESC_OrgWideDisplayName__c</columns>
        <columns>ESC_Recordtype__c</columns>
        <columns>ESC_LKP__c</columns>
        <columns>ESC_Region__c</columns>
        <columns>ESC_Related_Met_Name__c</columns>
        <columns>ESC_Role__c</columns>
        <columns>ESC_Segment__c</columns>
        <columns>ESC_Timezones__c</columns>
        <filterScope>Everything</filterScope>
        <label>canada</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SRM-{0000}</displayFormat>
        <label>ESCSegmentRegionMappingSet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ESC SegmentRegion MappingSets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>